==> Paciente8159/uCNC/uCNC/src/hal/mcus/rp2350/mcu_rp2350.c <==
#include "../../../cnc.h"
#include <string.h>
#include <stdbool.h>
#include <stdint.h>
#define IC74HC595_PIO_FREQ 20000000UL
#include "pico/stdlib.h"
#include "hardware/pio.h"
#include "ic74hc595.pio.h"

void mcu_rtc_isr(void)
{
	// enqueue alarm again
	mcu_enqueue_alarm(&rtc_alarm, 1000UL);

	// counts to 20 and reloads
#if SERVOS_MASK > 0
	static uint8_t ms_servo_counter = 0;
	uint8_t servo_counter = ms_servo_counter;

	switch (servo_counter)
	{
#if ASSERT_PIN(SERVO0)
	case SERVO0_FRAME:
		servo_start_timeout(mcu_servos[0]);
		io_set_output(SERVO0);
		break;
#endif
#if ASSERT_PIN(SERVO1)
	case SERVO1_FRAME:
		io_set_output(SERVO1);
		servo_start_timeout(mcu_servos[1]);
		break;
#endif
#if ASSERT_PIN(SERVO2)
	case SERVO2_FRAME:
		io_set_output(SERVO2);
		servo_start_timeout(mcu_servos[2]);
		break;
#endif
#if ASSERT_PIN(SERVO3)
	case SERVO3_FRAME:
		io_set_output(SERVO3);
		servo_start_timeout(mcu_servos[3]);
		break;
#endif
#if ASSERT_PIN(SERVO4)
	case SERVO4_FRAME:
		io_set_output(SERVO4);
		servo_start_timeout(mcu_servos[4]);
		break;
#endif
#if ASSERT_PIN(SERVO5)
	case SERVO5_FRAME:
		io_set_output(SERVO5);
		servo_start_timeout(mcu_servos[5]);
		break;
#endif
	}

	servo_counter++;
	ms_servo_counter = (servo_counter != 20) ? servo_counter : 0;

#endif
	mcu_rtc_cb(millis());
}

void mcu_init(void)
{
	mcu_io_init();

#ifdef IC74HC595_CUSTOM_SHIFT_IO
	ic74hc595_pio_init();
#endif
#ifndef RAM_ONLY_SETTINGS
	rp2350_eeprom_init(NVM_STORAGE_SIZE); // 2K Emulated EEPROM
#endif

	rp2350_uart_init(BAUDRATE);

	pinMode(LED_BUILTIN, OUTPUT);
	// init rtc, oneshot and servo alarms
	mcu_alarms_init();
	rtc_alarm.alarm_cb = &mcu_rtc_isr;
	mcu_enqueue_alarm(&rtc_alarm, 500000UL);

#if SERVOS_MASK > 0
	servo_alarm.alarm_cb = &mcu_clear_servos;
#endif

#ifdef MCU_HAS_SPI
	spi_config_t spi_conf = {0};
	spi_conf.mode = SPI_MODE;
	mcu_spi_config(spi_conf, SPI_FREQ);
#endif

#ifdef MCU_HAS_SPI2
	spi_config_t spi2_conf = {0};
	spi2_conf.mode = SPI2_MODE;
	mcu_spi2_config(spi2_conf, SPI2_FREQ);
#endif

#ifdef MCU_HAS_I2C
	mcu_i2c_config(I2C_FREQ);
#endif

#ifdef MCU_HAS_ONESHOT
	// // Set irq handler for alarm irq
	// irq_set_exclusive_handler(ONESHOT_IRQ, mcu_oneshot_isr);
	// // Enable the alarm irq
	// irq_set_enabled(ITP_TIMER_IRQ, true);
#endif
}

static void mcu_itp_isr(void)
{
	static bool resetstep = false;

	mcu_disable_global_isr();
	// Clear the alarm irq
	hw_clear_bits(&timer_hw->intr, (1U << ITP_TIMER));
	uint32_t target = (uint32_t)timer_hw->timerawl + mcu_step_reload;
	timer_hw->alarm[ITP_TIMER] = target;

	if (!resetstep)
	{
		mcu_step_cb();
	}

	else
	{
		mcu_step_reset_cb();
	}

	resetstep = !resetstep;
	mcu_enable_global_isr();
}

void mcu_start_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	hw_set_bits(&timer_hw->inte, 1u << ITP_TIMER);
	// Set irq handler for alarm irq
	irq_set_exclusive_handler(ITP_TIMER_IRQ, mcu_itp_isr);
	// Enable the alarm irq
	irq_set_enabled(ITP_TIMER_IRQ, true);
	// Enable interrupt in block and at processor

	// Alarm is only 32 bits so if trying to delay more
	// than that need to be careful and keep track of the upper
	// bits
	uint32_t target = (((uint32_t)ticks) << prescaller);
	mcu_step_reload = target;

	target += (uint32_t)timer_hw->timerawl;

	// Write the lower 32 bits of the target time to the alarm which
	// will arm it
	timer_hw->alarm[ITP_TIMER] = target;
}

void mcu_change_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	uint32_t target = (((uint32_t)ticks) << prescaller);
	mcu_step_reload = target;

	target += (uint32_t)timer_hw->timerawl;

	// Write the lower 32 bits of the target time to the alarm which
	// will arm it
	timer_hw->alarm[ITP_TIMER] = target;
}

void mcu_dotasks(void)
{
#ifndef RP2350_RUN_MULTICORE
	rp2350_uart_process();
#endif
}

void mcu_start_timeout()
{
	// hw_set_bits(&timer_hw->inte, 1u << ONESHOT_TIMER);
	// // Enable interrupt in block and at processor
	// // Alarm is only 32 bits so if trying to delay more
	// // than that need to be careful and keep track of the upper
	// // bits
	// uint32_t target = (((uint32_t)ticks) << prescaller);
	// rp2350_oneshot_reload = target;

	// target += (uint32_t)timer_hw->timerawl;

	// // Write the lower 32 bits of the target time to the alarm which
	// // will arm it
	// timer_hw->alarm[ONESHOT_TIMER] = target;
	mcu_enqueue_alarm(&oneshot_alarm, rp2350_oneshot_reload);
}
